projects/asw-880-kubernetes/o-sentence-application-ingress-path-rewriting/sentence-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: subject
  template: 
    metadata:
      labels:
        app: sentence
        service: subject
    spec:
      containers:
      - name: subject-container
        image: aswroma3/sentence-word-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 120
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: verb
  template: 
    metadata:
      labels:
        app: sentence
        service: verb
    spec:
      containers:
      - name: verb-container
        image: aswroma3/sentence-word-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 120
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: object
  template: 
    metadata:
      labels:
        app: sentence
        service: object
    spec:
      containers:
      - name: object-container
        image: aswroma3/sentence-word-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 120
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentence-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: sentence
  template: 
    metadata:
      labels:
        app: sentence
        service: sentence
        type: sync
    spec:
      containers:
      - name: sentence-container
        image: aswroma3/sentence-sentence-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 180
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10
#        startupProbe: 
#          httpGet: 
#            path: /actuator/health
#            port: 8080
#          periodSeconds: 10
#          failureThreshold: 30 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentence-async
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: sentence
  template: 
    metadata:
      labels:
        app: sentence
        service: sentence
        type: async
    spec:
      containers:
      - name: sentence-async-container
        image: aswroma3/sentence-sentence-async-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 180
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10
#        startupProbe: 
#          httpGet: 
#            path: /actuator/health
#            port: 8080
#          periodSeconds: 10
#          failureThreshold: 30 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentence
      service: apigateway
  template: 
    metadata:
      labels:
        app: sentence
        service: apigateway
    spec:
      containers:
      - name: apigateway-container
        image: aswroma3/sentence-apigateway-kube:2024-10
        ports:
        - containerPort: 8080
        livenessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 5
          failureThreshold: 3 
          initialDelaySeconds: 180
        readinessProbe: 
          httpGet: 
            path: /actuator/health
            port: 8080
          periodSeconds: 10
#        startupProbe: 
#          httpGet: 
#            path: /actuator/health
#            port: 8080
#          periodSeconds: 10
#          failureThreshold: 30 

---
apiVersion: v1
kind: Service
metadata:
  name: subject
spec:
  selector:
    app: sentence
    service: subject
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  
---
apiVersion: v1
kind: Service
metadata:
  name: verb
spec:
  selector:
    app: sentence
    service: verb
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: object
spec:
  selector:
    app: sentence
    service: object
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: sentence
spec:
  selector:
    app: sentence
    service: sentence
#  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: sentencesync
spec:
  selector:
    app: sentence
    service: sentence
    type: sync
#  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: sentenceasync
spec:
  selector:
    app: sentence
    service: sentence
    type: async
#  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: sentence
    service: apigateway
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
#    nodePort: 32082
